# ray-tracer-rust

./: Cargo.toml  Makefile  settings.json  shell.nix
renders/: 04_clock.ppm  06_sphere_3d.ppm  06_sphere_3d_shrink_skew.ppm  07_spheres.ppm  08_spheres_shadows.ppm  09_planes.ppm  10_patterns.ppm  11_reflection.ppm  12_cubes_table.ppm  13_ice_cream_cone_in_glass.ppm  14_groups_hex.ppm  sphere.ppm  sphere_shring_skew.ppm  trajectory.ppm
src/: bounds.rs  camera.rs  canvas.rs  cones.rs  cubes.rs  cylinders.rs  groups.rs  intersections.rs  lights.rs  main.rs  materials.rs  matrices.rs  obj_file.rs  patterns.rs  planes.rs  ppm.rs  rays.rs  shapes.rs  spheres.rs  transformations.rs  triangles.rs  tuples.rs  world.rs
