[package]
name = "ray-tracer"
version = "0.1.0"
authors = ["Nazarii Bardiuk <nazarii@bardiuk.com>"]
edition = '2018'

[dependencies]
sdl2 = "0.32.2"

[dev-dependencies]
hamcrest2 = "*"

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = false
